--- a/src/app/components/authentication/sign-in-form/sign-in-form.component.html
+++ b/src/app/components/authentication/sign-in-form/sign-in-form.component.html
@@ -7,9 +7,16 @@
   <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
 
   <!-- Password -->
-  <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Senha">
+  <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
 
   <div class="d-flex justify-content-around">
+      <div>
+          <!-- Remember me -->
+          <div class="custom-control custom-checkbox">
+              <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
+              <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
+          </div>
+      </div>
       <div>
           <!-- Forgot password -->
           <a href="">Esqueceu sua senha?</a>
