--- a/src/app/components/logged-area/logged-area.component.html
+++ b/src/app/components/logged-area/logged-area.component.html
@@ -1,30 +1,40 @@
-<aside class="logged-area-aside-menu">
-  <div class="cult-network-logo">
-    <span class="logo-title">
-      Cult Network<span class="logo-dot">.</span>
-    </span>
-  </div>
+<ng-container class="d-flex">
+  <aside class="logged-area-aside-menu d-flex flex-column align-items-center">
+    <div class="cult-network-logo">
+      <span class="logo-title">
+        Cult Network<span class="logo-dot">.</span>
+      </span>
+    </div>
 
-  <ul class="menu-options">
-    <li>
-       <fa-icon [icon]="faUser"></fa-icon>
-       <span>Meu Perfil</span>
-    </li>
-    <li>
-       <fa-icon [icon]="faBook"></fa-icon>
-       <span>Meu acervo</span>
-    </li>
-    <li>
-       <fa-icon [icon]="faBookMedical"></fa-icon>
-       <span>Adicionar livro</span>
-    </li>
-    <li>
-       <fa-icon [icon]="faShareAltSquare"></fa-icon>
-       <span>Trocar livros</span>
-    </li>
-    <li>
-       <fa-icon [icon]="faAngry"></fa-icon>
-       <span>Efetuar denúncia</span>
-    </li>
-  </ul>
-</aside>
+    <ul class="menu-options">
+      <!-- <li class="option">
+         <fa-icon [icon]="faHome"></fa-icon>
+         <span>Inicio</span>
+      </li> -->
+      <li class="option">
+         <fa-icon [icon]="faUser"></fa-icon>
+         <span>Meu Perfil</span>
+      </li>
+      <li class="option">
+         <fa-icon [icon]="faBook"></fa-icon>
+         <span>Minha biblioteca</span>
+      </li>
+      <li class="option">
+         <fa-icon [icon]="faBookMedical"></fa-icon>
+         <span>Adicionar livros</span>
+      </li>
+      <li class="option">
+         <fa-icon [icon]="faShareAltSquare"></fa-icon>
+         <span>Trocar livros</span>
+      </li>
+      <li class="option">
+         <fa-icon [icon]="faAngry"></fa-icon>
+         <span>Efetuar denúncia</span>
+      </li>
+    </ul>
+  </aside>
+
+  <div class="logged-area-content">
+    <router-outlet></router-outlet>
+  </div>
+</ng-container>
