Concertando bug do botao da tela de intro #2

--- a/src/app/components/intro/intro.component.html
+++ b/src/app/components/intro/intro.component.html
@@ -1,3 +1,5 @@
+
+
 <div
   class="intro-container jumbotron d-flex flex-column justify-content-center card card-image"
 >
@@ -11,7 +13,9 @@
         desejam se conectar com outras que também partilham desse interesse.
       </p>
       <a [routerLink]="['/sign-up']">
-        <button class="intro-button text-white">Registre-se agora</button>
+        <button class="intro-button text-white">
+          Registre-se agora
+        </button>
       </a>
     </div>
   </div>
