--- a/src/app/components/intro/intro.component.html
+++ b/src/app/components/intro/intro.component.html
@@ -12,9 +12,9 @@
         Junte-se a rede composta por pessoas que curtem uma boa leitura e
         desejam se conectar com outras que também partilham desse interesse.
       </p>
-      <a [routerLink]="['/sign-up']">
+      <a [routerLink]="['/auth/sign-in']">
         <button class="intro-button text-white">
-          Registre-se agora
+          Comece-se agora
         </button>
       </a>
     </div>
