Atualizaçao login e sign-up

--- a/src/app/components/authentication/authentication.component.html
+++ b/src/app/components/authentication/authentication.component.html
@@ -1,5 +1,5 @@
 <ng-container class="authentication-container">
-  <carousel class="carousel" [interval]="3000" [noPause]="true" [pauseOnFocus]="false" [isAnimated]="true">
+  <carousel class="carousel" [interval]="5000" [noPause]="true" [pauseOnFocus]="false" [isAnimated]="true">
     <slide>
       <img src="assets/images/slider-img-01.jpg" alt="first slide" style="display: block; width: 100%;">
     </slide>
@@ -11,7 +11,7 @@
     </slide>
   </carousel>
 
-  <div class="authentication-form-container d-flex flex-column align-items-center">
+  <div class="authentication-form-container d-flex flex-column align-items-center justify-content-center">
     <router-outlet></router-outlet>
   </div>
 </ng-container>
