--- a/src/app/components/authentication/sign-up-form/sign-up-form.component.html
+++ b/src/app/components/authentication/sign-up-form/sign-up-form.component.html
@@ -223,5 +223,10 @@
   >
     Registrar
   </button>
+  <!-- Register -->
+  <p>
+    Já possui conta?
+    <a [routerLink]="['/auth/sign-in']">Logar</a>
+  </p>
 </form>
 <!-- Default form register -->
