--- a/src/app/components/authentication/authentication.component.scss
+++ b/src/app/components/authentication/authentication.component.scss
@@ -7,6 +7,7 @@
 }
 
 .authentication-form-container{
+  min-height: 432px;
   max-width: 450px;
   margin: auto;
   background: rgba(255,255,255,0.9);
