--- a/src/app/components/authentication/sign-in-form/sign-in-form.component.html
+++ b/src/app/components/authentication/sign-in-form/sign-in-form.component.html
@@ -1,5 +1,9 @@
 <!-- Default form login -->
-<form class="text-center border border-light p-5" [formGroup]="signInForm">
+<form
+  class="text-center border border-light p-5"
+  [formGroup]="signInForm"
+  *ngIf="!isLoading"
+>
   <p class="h4 mb-4">Entre no Cult Network</p>
 
   <!-- Username -->
@@ -12,7 +16,8 @@
       [ngClass]="{
         'is-valid': signInForm.get('username').valid,
         'is-invalid':
-          !signInForm.get('username').valid && signInForm.get('username').touched
+          !signInForm.get('username').valid &&
+          signInForm.get('username').touched
       }"
       class="form-control"
       placeholder="Usuário"
@@ -24,7 +29,8 @@
           id="defaultRegisterFormNameHelpBlock"
           *ngIf="
             signInForm.get('username').hasError(error.type) &&
-            (signInForm.get('username').dirty || signInForm.get('username').touched)
+            (signInForm.get('username').dirty ||
+              signInForm.get('username').touched)
           "
         >
           {{ error.message }}
@@ -42,7 +48,8 @@
       [ngClass]="{
         'is-valid': signInForm.get('password').valid,
         'is-invalid':
-          !signInForm.get('password').valid && signInForm.get('password').touched
+          !signInForm.get('password').valid &&
+          signInForm.get('password').touched
       }"
       class="form-control"
       placeholder="Senha"
@@ -55,7 +62,8 @@
           class="d-block text-danger"
           *ngIf="
             signInForm.get('password').hasError(error.type) &&
-            (signInForm.get('password').dirty || signInForm.get('password').touched)
+            (signInForm.get('password').dirty ||
+              signInForm.get('password').touched)
           "
         >
           {{ error.message }}
@@ -72,7 +80,9 @@
   </div>
 
   <!-- Sign in button -->
-  <button class="btn btn-info btn-block my-4" (click)="signIn()" type="submit">Entrar</button>
+  <button class="btn btn-info btn-block my-4" (click)="signIn()" type="submit">
+    Entrar
+  </button>
 
   <!-- Register -->
   <p>
@@ -81,3 +91,11 @@
   </p>
 </form>
 <!-- Default form login -->
+<div
+  class="spinner-border"
+  role="status"
+  style="width: 5rem; height: 5rem"
+  *ngIf="isLoading"
+>
+  <span class="sr-only">Loading...</span>
+</div>
