--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,2 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import "src/assets/styles/_variables.scss"
+@import "src/assets/styles/toast.scss"
+
+// regular style toast
+@import '~ngx-toastr/toastr'
+
+// if you'd like to use it without importing all of bootstrap it requires
+@import '~bootstrap/scss/functions'
+@import '~bootstrap/scss/variables'
+@import '~bootstrap/scss/mixins'
+@import '~ngx-toastr/toastr-bs4-alert'
