--- a/src/app/components/logged-area/logged-area.component.scss
+++ b/src/app/components/logged-area/logged-area.component.scss
@@ -1,34 +1,43 @@
-.logged-area-aside-menu{
+.logged-area-aside-menu {
   width: 300px;
   height: 100vh;
-  position: sticky;
+  position: fixed;
   background: rgb(22, 18, 29);
   color: #e5e4f0;
-  .cult-network-logo{
+
+  a {
+    color: inherit !important;
+  }
+
+  .cult-network-logo {
     margin: 50px 0;
     font-size: 2em;
     font-weight: bold;
-    .logo-dot{
-      color: #3BB370
+    .logo-dot {
+      color: #3bb370;
     }
   }
-  .menu-options{
+  .menu-options {
     width: 100%;
     list-style: none;
     padding: 0;
-    .option{
+    .option {
       display: flex;
       width: 100%;
       padding: 0 10px;
       height: 50px;
-      transition: background .25s linear;
-      &:hover{
-        background-color: #3BB370	;
+      transition: background 0.25s linear;
+      &:hover {
+        background-color: #3bb370;
       }
       align-items: center;
-      span{
+      span {
         margin-left: 10px;
       }
     }
   }
+}
+
+.logged-area-content {
+  margin-left: 300px;
 }
