--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
 <router-outlet></router-outlet>
+<ngx-ui-loader [pbColor]="'#20c997'" [fgsColor]="'#20c997'" [fgsType]="SPINNER.pulse"></ngx-ui-loader>
