--- a/src/app/components/authentication/sign-in-form/sign-in-form.component.html
+++ b/src/app/components/authentication/sign-in-form/sign-in-form.component.html
@@ -1,9 +1,5 @@
 <!-- Default form login -->
-<form
-  class="text-center border border-light p-5"
-  [formGroup]="signInForm"
-  *ngIf="!isLoading"
->
+<form class="text-center border border-light p-5" [formGroup]="signInForm">
   <p class="h4 mb-4">Entre no Cult Network</p>
 
   <!-- Username -->
@@ -80,7 +76,15 @@
   </div>
 
   <!-- Sign in button -->
-  <button class="btn btn-info btn-block my-4" (click)="signIn()" type="submit">
+  <button
+    [disabled]='signInForm.invalid'
+    mdbBtn
+    color="info"
+    block="true"
+    class="my-4"
+    (click)="signIn()"
+    type="submit"
+  >
     Entrar
   </button>
 
@@ -90,12 +94,3 @@
     <a [routerLink]="['/auth/sign-up']">Cadastre-se</a>
   </p>
 </form>
-<!-- Default form login -->
-<div
-  class="spinner-border"
-  role="status"
-  style="width: 5rem; height: 5rem"
-  *ngIf="isLoading"
->
-  <span class="sr-only">Loading...</span>
-</div>
