update geral + resolvendo bug na autenticacao

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<router-outlet></router-outlet>
+<router-outlet (activate)="onChangeRoute()"></router-outlet>
 <ngx-ui-loader [pbColor]="'#20c997'" [fgsColor]="'#20c997'" [fgsType]="SPINNER.pulse"></ngx-ui-loader>
