--- a/src/app/components/logged-area/logged-area.component.scss
+++ b/src/app/components/logged-area/logged-area.component.scss
@@ -9,6 +9,10 @@
     color: inherit !important;
   }
 
+  li {
+    cursor: pointer;
+  }
+
   .cult-network-logo {
     margin: 50px 0;
     font-size: 2em;
