--- a/src/app/components/logged-area/logged-area.component.html
+++ b/src/app/components/logged-area/logged-area.component.html
@@ -23,7 +23,7 @@
         <fa-icon [icon]="faBookMedical"></fa-icon>
         <span>Adicionar livros</span>
       </li>
-      <li class="option">
+      <li class="option" [routerLink]="['/app/search-book']">
         <fa-icon [icon]="faShareAltSquare"></fa-icon>
         <span>Trocar livros</span>
       </li>
