--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -20,6 +20,12 @@
   --danger: #dc3545;
   --light: #f8f9fa;
   --dark: #343a40;
+
+
+  --cult-network-secondary: rgb(22, 18, 29);
+  --cult-network-primary: #3bb370;
+  --cult-network-light: #e5e4f0;
+
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
