update criacao tela de denuncia

--- a/src/app/components/logged-area/logged-area.component.html
+++ b/src/app/components/logged-area/logged-area.component.html
@@ -27,7 +27,7 @@
         <fa-icon [icon]="faShareAltSquare"></fa-icon>
         <span>Trocar livros</span>
       </li>
-      <li class="option">
+      <li class="option"  [routerLink]="['/app/report']" >
         <fa-icon [icon]="faAngry"></fa-icon>
         <span>Efetuar denúncia</span>
       </li>
